--- a/templates/admin/location_edit.html.twig
+++ b/templates/admin/location_edit.html.twig
@@ -10,37 +10,28 @@
     <script type="text/javascript">
         var map = new L.Map('map');
 
-        var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-            osmAttrib = 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">2022 OpenStreetMap contributors</a>',
-            osm = new L.TileLayer(osmUrl, {maxZoom: 19, attribution: osmAttrib});
-
-        var geocodeService = L.esri.Geocoding.geocodeService({
-            apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu"
-        });
+        var osm = new L.TileLayer(osmUrl, {maxZoom: 19, attribution: osmAttrib});
 
         map.setView(new L.LatLng({{ location.lat }}, {{ location.lng }}), 13).addLayer(osm);
 
         var popup = L.popup();
 
-        geocodeService.reverse().latlng(new L.LatLng({{ location.lat }}, {{ location.lng }})).run((error, result) =>
+        (async() =>
         {
-            if (error) return;
+            let result = await reverse(new L.LatLng({{ location.lat }}, {{ location.lng }}));
 
             document.getElementById("address").value = result.address.LongLabel;
-        });
+        })();
 
-        function onMapClick(e)
+        async function onMapClick(e)
         {
-            geocodeService.reverse().latlng(e.latlng).run((error, result) =>
-            {
-                if (error) return;
+            let result = await reverse(e.latlng);
 
-                popup.setLatLng(e.latlng)
-                    .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
-                    .openOn(map);
+            popup.setLatLng(e.latlng)
+                .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
+                .openOn(map);
 
-                document.getElementById("address").value = result.address.LongLabel;
-            });
+            document.getElementById("address").value = result.address.LongLabel;
 
             document.getElementById("lat").value = e.latlng.lat;
             document.getElementById("lng").value = e.latlng.lng;
@@ -50,17 +41,14 @@
 
         marker.bindPopup("<b>Pranešimo data:</b> <br>{{ location.created_at|split(".")[0] }}");
 
-        function onMarkerClick(e)
+        async function onMarkerClick(e)
         {
             document.getElementById("lat").value = e.latlng.lat;
             document.getElementById("lng").value = e.latlng.lng;
 
-            geocodeService.reverse().latlng(e.latlng).run((error, result) =>
-            {
-                if (error) return;
+            let result =  await reverse(e.latlng);
 
-                document.getElementById("address").value = result.address.LongLabel;
-            });
+            document.getElementById("address").value = result.address.LongLabel;
         }
 
         marker.on('click', onMarkerClick);
