--- a/templates/admin/main.html.twig
+++ b/templates/admin/main.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base_admin.html.twig' %}
 
-{% block body %}
-
-
+{% block title %}
+    „ROADCHECK“ | Administravimas
 {% endblock %}
 
+{% block body %}
+
+{% endblock %}
 
 {% block navigation %}
     {{ parent() }}
