--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,6 +22,55 @@
     <!-- Load Leaflet Control Geocoder -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
+    <script>
+        var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+            osmAttrib = 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">2022 OpenStreetMap contributors</a>';
+
+        var geocodeService = L.esri.Geocoding.geocodeService({
+            apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu"
+        });
+
+        const reverse = (latlng) =>
+        {
+            return new Promise((resolve, reject) =>
+            {
+                geocodeService.reverse().latlng(latlng).run((err, result) =>
+                {
+                    if (err) return reject(err);
+
+                    return resolve(result);
+                });
+            });
+        }
+
+        const getMap = (lat, lng, zoom) =>
+        {
+            return new Promise((resolve, reject) =>
+            {
+                var map = new L.map('map', {
+                    center: [lat, lng],
+                    zoom: zoom,
+                    layers: [
+                        L.tileLayer(osmUrl, {
+                            attribution: osmAttrib
+                        })
+                    ]
+                });
+
+                return resolve(map);
+            });
+        }
+
+        async function locationPopup(e, map, popup)
+        {
+            let result = await reverse(e.latlng);
+
+            popup.setLatLng(e.latlng)
+                .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
+                .openOn(map);
+        }
+    </script>
 
     {% block navigation %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-black justify-content-center">
@@ -54,7 +104,6 @@
 
     {% endblock %}
     </div>
-
 
     <footer class="bg-black text-center text-lg-start">
 
