--- a/templates/map/index.html.twig
+++ b/templates/map/index.html.twig
@@ -7,59 +7,36 @@
 {% block body %}
     <div id="map" style="height: 100vh;"></div>
     <script type="text/javascript">
-        var map = new L.Map('map');
-
-        var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-            osmAttrib = 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">2022 OpenStreetMap contributors</a>',
-            osm = new L.TileLayer(osmUrl, {maxZoom: 18, attribution: osmAttrib});
-
-        var lat = 54.911824;
-        var lng = 23.923679;
-        var zoom = 13;
-
-        {% if lat|default(null) %}
-            lat = {{ lat }};
-            zoom = 18;
-        {% endif %}
-        {% if long|default(null) %}
-            lng = {{ long }};
-            zoom = 18;
-        {% endif %}
-
-        map.setView(new L.LatLng(lat, lng), zoom).addLayer(osm);
-
-        {% if locations|default(null) %}
-            {% for loc in locations %}
-                var marker = L.marker([{{ loc.lat }}, {{ loc.lng }}]).addTo(map);
-
-                marker.bindPopup("<b>Pranešimo data:</b> <br>{{ loc.created_at|split(".")[0] }}");
-            {% endfor %}
-        {% endif %}
-
-        var popup = L.popup();
-
-        function onMapClick(e)
+        (async() =>
         {
-            var geocodeService = L.esri.Geocoding.geocodeService({
-                apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu"
+            var lat = 54.911824;
+            var lng = 23.923679;
+
+            var zoom = 13;
+
+            {% if lat|default(null) %}
+                lat = {{ lat }};
+                zoom = 18;
+            {% endif %}
+            {% if long|default(null) %}
+                lng = {{ long }};
+                zoom = 18;
+            {% endif %}
+
+            var map = await getMap(lat, lng, zoom);
+
+            {% if locations|default(null) %}
+                {% for loc in locations %}
+                    var marker = L.marker([{{ loc.lat }}, {{ loc.lng }}]).addTo(map);
+
+                    marker.bindPopup("<b>Pranešimo data:</b> <br>{{ loc.created_at|split(".")[0] }}");
+                {% endfor %}
+            {% endif %}
+
+            map.on('click', (e) => {
+                locationPopup(e, map, L.popup());
             });
-
-            geocodeService.reverse().latlng(e.latlng).run(function (error, result)
-            {
-                if (error)
-                {
-                    return;
-                }
-
-                popup.setLatLng(e.latlng)
-                    .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
-                    .openOn(map);
-            });
-        }
-
-        map.on('click', onMapClick);
-
-        L.Control.geocoder().addTo(map);
+        })();
     </script>
 {% endblock %}
 
