--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -7,47 +7,28 @@
 {% block body %}
     <div id="map" style="height: 50vh;"></div>
     <script type="text/javascript">
-        var map = new L.Map('map');
-
-        var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-            osmAttrib = 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">2022 OpenStreetMap contributors</a>',
-            osm = new L.TileLayer(osmUrl, {maxZoom: 19, attribution: osmAttrib});
-
-        var lat = 54.911824;
-        var lng = 23.923679;
-        var zoom = 13;
-
-        map.setView(new L.LatLng(lat, lng), zoom).addLayer(osm);
-
-        var popup = L.popup();
-
-        function onMapClick(e)
+        (async() =>
         {
-            var geocodeService = L.esri.Geocoding.geocodeService({
-                apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu"
-            });
+            var map = await getMap(54.911824, 23.923679, 13, 19);
 
-            geocodeService.reverse().latlng(e.latlng).run((error, result) =>
+            var popup = L.popup();
+
+            async function onMapClick(e)
             {
-                if (error)
-                {
-                    return;
-                }
+                let result = await reverse(e.latlng);
 
                 popup.setLatLng(e.latlng)
                     .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
                     .openOn(map);
 
                 document.getElementById("address").value = result.address.LongLabel;
-            });
 
-            document.getElementById("lat").value = e.latlng.lat;
-            document.getElementById("lng").value = e.latlng.lng;
-        }
+                document.getElementById("lat").value = e.latlng.lat;
+                document.getElementById("lng").value = e.latlng.lng;
+            }
 
-        map.on('click', onMapClick);
-
-        L.Control.geocoder().addTo(map);
+            map.on('click', onMapClick);
+        })();
     </script>
     <br>
     <div class="main-panel">
